--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,11 @@
     "node": true
   },
   "rules": {
-
+    "semi": "off",
+    "arrow-parens": "off",
+    "comma-dangle": "off",
+    "require-jsdoc": "off",
+    "operator-linebreak": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
