--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pure JavaScript Excel Application",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack --mode production",
@@ -41,6 +42,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
     "html-webpack-plugin": "^4.4.1",
+    "jest": "^26.5.3",
     "mini-css-extract-plugin": "^0.11.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
@@ -50,6 +52,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "eslint-plugin-jest": "^24.1.0",
     "normalize.css": "^8.0.1"
   }
 }
